Fixed spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -23,6 +23,7 @@ h3 span {
     align-items: center;
     text-align: left;
     margin-bottom: 50px;
+    margin-top: 100px;
 }
 
 .odd-image-div {
